fixes sidescrolling issue (extra padding and border and negative margins)

--- a/css/countdown.scss
+++ b/css/countdown.scss
@@ -13,7 +13,7 @@
   display:block;
   position:absolute;
   top:242px;
-  right:81px;
+  right:51px;
   z-index:99999;
   text-indent:-999em;
 }
