--- a/css/general.scss
+++ b/css/general.scss
@@ -2,9 +2,6 @@
  * General.css
  * Things that just don't fit anywhere else and don't need their ownfile
  */
-html {
-  overflow-x:hidden;
-  }
 body {
   background-color:#333;
   background-image: url('%%body-background%%');
